--- a/SalaryDataAnalyzer/SalaryDataAnalyzer/SalaryDataAnalyzer.csproj
+++ b/SalaryDataAnalyzer/SalaryDataAnalyzer/SalaryDataAnalyzer.csproj
@@ -35,6 +35,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AForge, Version=2.2.5.0, Culture=neutral, PublicKeyToken=c1db6ff4eaa06aeb, processorArchitecture=MSIL">
+      <HintPath>..\packages\AForge.2.2.5\lib\AForge.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Genetic, Version=2.2.4.0, Culture=neutral, PublicKeyToken=4336634eeb41b69b, processorArchitecture=MSIL">
+      <HintPath>..\packages\AForge.Genetic.2.2.5\lib\AForge.Genetic.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Math, Version=2.2.5.0, Culture=neutral, PublicKeyToken=abba2e25397ee8c9, processorArchitecture=MSIL">
+      <HintPath>..\packages\AForge.Math.2.2.5\lib\AForge.Math.dll</HintPath>
+    </Reference>
+    <Reference Include="AForge.Neuro, Version=2.2.5.0, Culture=neutral, PublicKeyToken=2094f4ea39731d4f, processorArchitecture=MSIL">
+      <HintPath>..\packages\AForge.Neuro.2.2.5\lib\AForge.Neuro.dll</HintPath>
+    </Reference>
     <Reference Include="LumenWorks.Framework.IO, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5ad3ea2f85776344, processorArchitecture=MSIL">
       <HintPath>..\packages\LumenWorksCsvReader.4.0.0\lib\net461\LumenWorks.Framework.IO.dll</HintPath>
     </Reference>
@@ -120,7 +132,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Contracts\RespCompanySize.cs" />
+    <Compile Include="Contracts\RespConvertedSalary.cs" />
+    <Compile Include="Contracts\RespCountry.cs" />
+    <Compile Include="Contracts\RespDevType.cs" />
+    <Compile Include="Contracts\RespEmployment.cs" />
+    <Compile Include="Contracts\RespFormalEducation.cs" />
+    <Compile Include="Contracts\RespStudent.cs" />
+    <Compile Include="Contracts\RespYearsCoding.cs" />
     <Compile Include="Contracts\Survey.cs" />
+    <Compile Include="Model\NeuralNetwork.cs" />
     <Compile Include="Services\DataAnalyzerService.cs" />
     <Compile Include="Services\IDataAnalyzerService.cs" />
     <Page Include="MainWindow.xaml">
