--- a/.gitignore
+++ b/.gitignore
@@ -328,3 +328,4 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+SalaryDataAnalyzer/SalaryDataAnalyzer/Data/survey_results_public.csv
